# user_lottery

./: lottery.db  pyproject.toml
src/: lottery.db  main.py  users.csv
src/data/: database.py
