[tool.poetry]
name = "user-lottery"
version = "0.1.0"
description = ""
authors = ["Daniel Aspect <dnh77227@gmail.com>"]
readme = "README.md"
packages = [{include = "user_lottery"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
